--- a/Slides/ResponsiveDesignWorkshop.html
+++ b/Slides/ResponsiveDesignWorkshop.html
@@ -119,13 +119,13 @@
 
 
       <section>
-        <h3>What is Responsive?</h3>
+        <h3>What is Responsive Design?</h3>
         <p>It depends on who you ask!</p>
         <img src = "images/mashable.png" width="450px"> 
       </section>
 
       <section>
-        <h3>What is Responsive?</h3>
+        <h3>What is Responsive Design?</h3>
         <p>And we have this:</p>
         <img src = "images/rwd-not-the-future.png" width="600px"> 
       </section>
@@ -136,15 +136,20 @@
         <div style="float: left; width: 60%;"><p style="text-align: left;">It's the theory and practice of crafting websites that allow the user to enjoy its features no matter what device they are viewing it on.</p></div>
         <div style="float: right; width:40%;"><img src="images/cute.png" width="300px"/></div>
 
-
       </section>
 
-      <section>
-        <h3>Responsive's roots</h3>
-        <p>Responsive Web Design was first coined by Ethan Marcotte in the <a href="http://alistapart.com/article/responsive-web-design" target="_blank">May 2010 issue of A List Apart</a>.</p>
-        <img src = "images/alistapart.png" width="500px"/>
+ <section>
+        <h3>Responsive, Fixed, and Jello</h3>
+        
+        <div style="float: left; width: 60%;"><p style="text-align: left;"> Remember “best viewed in Internet Explorer at 640x480px”</p></div>
+        <div style="float: right; width:40%;">Jello combines elements of both fixed and responsive design; it's both solid and liquid.</div>
+
+
+
+ “best viewed in Internet Explorer at 640x480px”
+
       </section>
-      <section>
+        <section>
         <h3>Responsive's ingredients</h3>
         <ul><li>flexible foundation</li>
           <li>fluid grids</li>
